--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Você decide o futuro da IA</title>
+
 </head>
 <body>
-    
+    <div class="caixa-principal"> 
+   <h1>Você decide o futuro da IA</h1>
+   <div class="caixa-perguntas"></div>
+   <div class="caixa-alternativas"></div>
+   <div class="caixa-resultado">
+       <p class="texto-resultado"></p>
+   </div>
+
+</div>
+    <script src="script.js"></script>
 </body>
 </html>
